--- a/Principal_Alt.ipynb
+++ b/Principal_Alt.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 310,
    "id": "6c079cad-8664-48f3-9fa3-f8af14549c37",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        " 0//1  0//1  1//4  0//1  3//4"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 311,
    "id": "5229e9a0-f0d3-49ab-8847-dd793d7ad7ef",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 312,
    "id": "77157ecd-0b26-4261-97bf-a68f86834c3e",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "Flux_imp! (generic function with 1 method)"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 312,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 313,
    "id": "5170ba39-7b17-418a-a098-c8d022f5befd",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 319,
    "id": "f45bd39e-eb40-40c3-a26c-086cb5f971e1",
    "metadata": {},
    "outputs": [
@@ -217,14 +217,14 @@
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       " -63.75    -50.25     -63.9375   -53.4375   -47.1875\n",
-       " -50.25    -43.75     -53.4375   -47.1875   -42.1875\n",
-       " -63.9375  -53.4375  -639.844   -554.906   -497.344\n",
-       " -53.4375  -47.1875  -554.906   -497.344   -451.406\n",
-       " -47.1875  -42.1875  -497.344   -451.406   -414.844"
+       " -196.229    -98.3777   -209.907   -160.089  -169.444\n",
+       "  -98.0683  -101.195    -165.129   -186.244  -144.04\n",
+       " -211.618   -165.793   -1686.11   -1000.35   -861.902\n",
+       " -165.793   -188.46    -1000.35    -861.902  -667.701\n",
+       " -188.46    -151.425    -861.902   -667.701  -606.978"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
    "source": [
     "re = zeros(5)\n",
     "fl = zeros(5)\n",
-    "flu=[-1.;0.6;0.0;0.;0.];\n",
+    "flu=0.5*[-1.;0.6;0.0;0.0;0.1];\n",
     "par_f = [1,1.0,1.00000]\n",
     "con = F_alt!(re,flu,zeros(5), par_f);\n",
     "JFac_f(fl,flu,con,par_f)\n",
