--- a/calculos_new.ipynb
+++ b/calculos_new.ipynb
@@ -98,6 +98,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "947e54a8-2d33-41b2-95ee-60ba2c6cc9b2",
+   "metadata": {},
+   "source": [
+    "\\begin{eqnarray*}\n",
+    "    A_2^{abc} &=& -\\frac{12\\chi_2}{\\mu^4}[\\frac{10}{3}\\frac{\\nu}{\\sqrt{-\\mu}}\n",
+    "        (u^a g^{bc} + u^bg^{ac} + g^{ab}u^c + 6u^a u^b u^c )  \\\\\n",
+    "    &+& 6(u^a u^b r^c + u^a r^b u^c + r^a u^b u^c) + (g^{ab}r^c + r^a g^{bc} + r^b g^{ac})  \\\\\n",
+    "    &+& \\sqrt{-\\mu}(\\tilde{\\tau}^{ab}u^{c} + u^{b}\\tilde{\\tau}^{ac} + u^a \\tilde{\\tau}^{bc}]\n",
+    "\\end{eqnarray*}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "ffe7e5d9-68a8-4b39-8abc-0bc8f29861c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NA000_2 = -12χ₂*T^8*(10//3*ν*T*(u0*g00 + u0*g00 + u0*g00 + 6*u0*u0*u0) + 6*(u0*u0*r0 + u0*r0*u0 + r0*u0*u0) + (g00*r0 + r0*g00 + r0*g00) + (t00*u0 + u0*t00 + u0*t00)/T);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "4cc69b85-8ddf-49a4-b9bd-657d2807447b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NA001_2 = -12χ₂*T^8*(10//3*ν*T*(u0*g01 + u0*g01 + u1*g00 + 6*u0*u0*u1) \n",
+    "    + 6*(u0*u0*r1 + u0*r0*u1 + r0*u0*u1) \n",
+    "    + (g00*r1 + r0*g01 + r0*g01) + (t00*u1 + u0*t01 + u0*t01)/T);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "800e4fa5-e28f-4ff2-a663-e381f0f166ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NA011_2 = -12χ₂*T^8*(10//3*ν*T*(u0*g11 + u1*g01 + u1*g01 + 6*u0*u1*u1) \n",
+    "    + 6*(u0*u1*r1 + u0*r1*u1 + r0*u1*u1) \n",
+    "    + (g01*r1 + r0*g11 + r0*g11) + (t01*u1 + u0*t11 + u1*t01)/T);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "e95fafde-f681-4754-a6bd-e2ee9b88853c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NA111_2 = -12χ₂*T^8*(10//3*ν*T*(u1*g11 + u1*g11 + u1*g11 + 6*u1*u1*u1) \n",
+    "    + 6*(u1*u1*r1 + u1*r1*u1 + r1*u1*u1) \n",
+    "    + (g11*r1 + r1*g11 + r1*g11) + (t11*u1 + u1*t11 + u1*t11)/T);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
    "id": "34d9873d-f9a2-4655-bceb-e031b8da292f",
@@ -263,6 +322,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 120,
+   "id": "ae221c36-1c6e-48b2-99f0-30ab182b48b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       " - 12 T^{8} \\chi{_2} \\left(  - 3 r1 v + \\frac{10}{3} T \\nu \\left(  - 3 \\gamma + 6 \\gamma^{3} \\right) + 18 \\gamma^{2} r1 v + \\frac{3 v^{2} t11 \\gamma}{T} \\right)\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "-12χ₂*((10//3)*T*ν*(6(γ^3) - (3γ)) + 18r1*v*(γ^2) + 3t11*γ*(T^-1)*(v^2) - (3r1*v))*(T^8)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(substitute(NA000_2, Dict(DIC)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "b110f330-9f53-435a-a3fe-3a4aea8e6c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "36 T^{8} r1 v \\chi{_2} + 120 T^{9} \\gamma \\nu \\chi{_2} - 240 \\gamma^{3} T^{9} \\nu \\chi{_2} - 216 \\gamma^{2} T^{8} r1 v \\chi{_2} - 36 v^{2} T^{7} t11 \\gamma \\chi{_2}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "36r1*v*χ₂*(T^8) + (120//1)*γ*ν*χ₂*(T^9) - ((240//1)*ν*χ₂*(T^9)*(γ^3)) - (216r1*v*χ₂*(T^8)*(γ^2)) - (36t11*γ*χ₂*(T^7)*(v^2))"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(substitute(NA000_2, Dict(DIC)),expand=true,\n",
+    "            threaded=false,\n",
+    "            thread_subtree_cutoff=100,\n",
+    "            rewriter=nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e25c324f-ae80-4c9e-84d4-12a6c4095c80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NA2_000 = -12*T^8*χ₂*(10*T*ν*γ*(-1+2γ^2) + r1*v*3*(-1 + 6γ^2) + 3*t11*v^2*γ/T)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 106,
    "id": "aabb1171-f408-4b99-a01e-942b847ca2e6",
    "metadata": {},
@@ -285,6 +409,71 @@
    ],
    "source": [
     "simplify(substitute(A001_2, Dict(DIC)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "1f8c3e99-a286-40a1-92e2-207bd1e67b8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       "12 T^{8} r1 \\chi{_2} - 72 \\gamma^{2} T^{8} r1 \\chi{_2} - 144 \\gamma^{2} v^{2} T^{8} r1 \\chi{_2} - 24 T^{7} t11 v \\gamma \\chi{_2} - 12 v^{3} T^{7} t11 \\gamma \\chi{_2} + 40 T^{9} v \\gamma \\nu \\chi{_2} - 240 \\gamma^{3} T^{9} v \\nu \\chi{_2}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "12r1*χ₂*(T^8) + (40//1)*v*γ*ν*χ₂*(T^9) - (72r1*χ₂*(T^8)*(γ^2)) - (144r1*χ₂*(T^8)*(v^2)*(γ^2)) - (24t11*v*γ*χ₂*(T^7)) - (12t11*γ*χ₂*(T^7)*(v^3)) - ((240//1)*v*ν*χ₂*(T^9)*(γ^3))"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(substitute(NA001_2, Dict(DIC)),expand=true,\n",
+    "            threaded=false,\n",
+    "            thread_subtree_cutoff=100,\n",
+    "            rewriter=nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "853f2010-d0e4-4acb-9d0a-0d8eadd746f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "A2_001 = -12T^8*χ₂*(T*γ*v*ν*10/3*(6γ^2 -1) + r1*(-1 + 6γ^2*(1+2v^2)) + t11*v*γ*(2+v^2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "0ffe5b8d-dd97-4bc5-8161-0a0f73a7326c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       " - 12 T^{7} \\chi{_2} \\left( T r1 \\left( -1 + 6 \\gamma^{2} + 12 \\gamma^{2} v^{2} \\right) + \\frac{t11 v \\gamma \\left( 2 + v^{2} \\right)}{T} + \\frac{10}{3} T^{2} v \\gamma \\nu \\left( -1 + 6 \\gamma^{2} \\right) \\right)\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "-12χ₂*(T*r1*(6(γ^2) + 12(v^2)*(γ^2) - 1) + t11*v*γ*(T^-1)*(2 + v^2) + (10//3)*v*γ*ν*(T^2)*(6(γ^2) - 1))*(T^7)"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NA2_001 = -12*χ₂*T^7*(10//3*v*ν*γ*T^2*(-1+6γ^2) + r1*T*(-1 + 6γ^2 + 12γ^2*v^2) + t11*v*γ*(2+v^2)/T)"
    ]
   },
   {
@@ -315,6 +504,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 141,
+   "id": "4fa7c445-4e81-466f-a108-224c41e7925a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       " - 24 T^{8} r1 v \\chi{_2} - 12 T^{7} t11 \\gamma \\chi{_2} - 40 T^{9} \\gamma \\nu \\chi{_2} - 144 \\gamma^{2} T^{8} r1 v \\chi{_2} - 72 \\gamma^{2} v^{3} T^{8} r1 \\chi{_2} - 24 v^{2} T^{7} t11 \\gamma \\chi{_2} - 240 \\gamma^{3} v^{2} T^{9} \\nu \\chi{_2}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "-24r1*v*χ₂*(T^8) - (12t11*γ*χ₂*(T^7)) - ((40//1)*γ*ν*χ₂*(T^9)) - (144r1*v*χ₂*(T^8)*(γ^2)) - (72r1*χ₂*(T^8)*(v^3)*(γ^2)) - (24t11*γ*χ₂*(T^7)*(v^2)) - ((240//1)*ν*χ₂*(T^9)*(v^2)*(γ^3))"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(substitute(NA011_2, Dict(DIC)),expand=true,\n",
+    "            threaded=false,\n",
+    "            thread_subtree_cutoff=100,\n",
+    "            rewriter=nothing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "20a54480-8e20-4107-9c8b-c4dc4b6fb345",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       " - 12 T^{7} \\chi{_2} \\left( t11 \\gamma \\left( 1 + 2 v^{2} \\right) + T r1 v \\left( 2 + 12 \\gamma^{2} + 6 \\gamma^{2} v^{2} \\right) + \\frac{10}{3} T^{2} \\gamma \\nu \\left( 2 + 6 \\gamma^{2} v^{2} \\right) \\right)\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "-12χ₂*(t11*γ*(1 + 2(v^2)) + T*r1*v*(2 + 12(γ^2) + 6(v^2)*(γ^2)) + (10//3)*γ*ν*(T^2)*(2 + 6(v^2)*(γ^2)))*(T^7)"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NA2_011 = -12*χ₂*T^7*(T^2*ν*γ*10//3*(1 + 6γ^2*v^2) + r1*T*v*(2 + 12*γ^2 + 6*γ^2*v^2) + t11*γ*(1+2v^2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 108,
    "id": "a98146d8-d534-4d7b-8bb3-e6b073bec140",
    "metadata": {},
@@ -337,6 +581,35 @@
    ],
    "source": [
     "simplify(substitute(A111_2, Dict(DIC)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "5d6c42ab-6acb-4577-b8f8-bad0096d21a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       " - 36 T^{8} r1 \\chi{_2} - 216 \\gamma^{2} v^{2} T^{8} r1 \\chi{_2} - 36 T^{7} t11 v \\gamma \\chi{_2} - 120 T^{9} v \\gamma \\nu \\chi{_2} - 240 \\gamma^{3} v^{3} T^{9} \\nu \\chi{_2}\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "-36r1*χ₂*(T^8) - (216r1*χ₂*(T^8)*(v^2)*(γ^2)) - (36t11*v*γ*χ₂*(T^7)) - ((120//1)*v*γ*ν*χ₂*(T^9)) - ((240//1)*ν*χ₂*(T^9)*(v^3)*(γ^3))"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplify(substitute(NA111_2, Dict(DIC)),expand=true,\n",
+    "            threaded=false,\n",
+    "            thread_subtree_cutoff=100,\n",
+    "            rewriter=nothing)"
    ]
   },
   {
