mensaje para Pablo

--- a/Principal_Alt.ipynb
+++ b/Principal_Alt.ipynb
@@ -1512,6 +1512,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c4d6ea2-3c58-420a-999b-62b582663708",
+   "metadata": {},
+   "source": [
+    "## En la celda anterior pese a que uno cambie el signo de par_s los autovalores no cambian. Pero si cambio el signo delante del + 1.0*II... si cambia. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 151,
    "id": "f74ba006-1547-467b-a36a-a1c8492a7e42",
