looking at inversion, not working properly

--- a/test_inversion_ext.ipynb
+++ b/test_inversion_ext.ipynb
@@ -11,22 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "# 1 method for generic function <b>f2c!</b>:<ul><li> f2c!(R, flu, con, χ) in Main at <a href=\"https://github.com/reula/Conformal-Fluids-Julia/tree/f9ff37e77859c64598c907e3e5faefe6a5c00d0f//inversion_ext.jl#L126\" target=\"_blank\">/Users/reula/Julia/Fluidos_Conformes/inversion_ext.jl:126</a></li> </ul>"
+      ],
       "text/plain": [
-       "#83 (generic function with 1 method)"
+       "# 1 method for generic function \"f2c!\":\n",
+       "[1] f2c!(R, flu, con, χ) in Main at /Users/reula/Julia/Fluidos_Conformes/inversion_ext.jl:126"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "include(\"inversion_ext.jl\")"
+    "include(\"inversion_ext.jl\")\n",
+    "methods(f2c!)"
    ]
   },
   {
@@ -40,38 +45,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "[0.0 0.0 0.0 0.0 0.0]\n",
+      "[-1.0 0.2 1.1 1.5 1.2]\n",
+      "[11403.233002651888, 9202.42888956158, 1025.3789996381936, 784.3167939570147, 608.8099432677805]\n",
+      "[11403.233002651888, 9202.42888956158, 1025.3789996381936, 784.3167939570147, 608.8099432677805]\n",
+      "[11403.233002651888, 9202.42888956158, 1025.3789996381936, 784.3167939570147, 608.8099432677805, -1.0, 0.2, 1.1, 1.5, 1.2]\n",
+      "[0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n"
+     ]
+    }
+   ],
    "source": [
     "N=10\n",
     "M=1\n",
     "χ = [-1.0; -1.0; -5.0]\n",
-    "p = (χ, N, M, F_alt!)\n",
+    "p = (χ, N, M, f2c!)\n",
     "u = zeros(N*M)\n",
     "u0 = zeros(N*M)\n",
-    "\n",
+    "println(u)\n",
+    "R = zeros(5)\n",
     "con = view(reshape(u,(M,N)),:,1:5)\n",
     "flu = view(reshape(u,(M,N)),:,6:10)\n",
-    "\n",
-    "flu[1,:] = [-10.0, 0.2, 1.1, 1.5, 1.2]\n",
-    "con[1,:] = F_alt(con[1,:],flu[1,:],χ)\n",
+    "println(flu)\n",
+    "#flu[1,:] = [-1.0, 0.0, 0.3, 1.5, 1.2]\n",
+    "flu[1,:] = [-1.0, 0.2, 1.1, 1.5, 1.2]\n",
+    "println(flu)\n",
+    "con[1,:] = f2c!(R,flu[1,:],con[1,:],χ)\n",
+    "println(R)\n",
+    "println(con[1,:])\n",
     "\n",
     "con0 = view(reshape(u0,(M,N)),:,1:5)\n",
     "flu0 = view(reshape(u0,(M,N)),:,6:10)\n",
     "\n",
-    "flu0[1,:] = [-10.0, 0.2, 1.1, 1.5, 1.2]\n",
+    "flu0[1,:] = [-1.0, 0.2, 1.1, 1.5, 1.2]\n",
     "#con0[1,:] = [0.1366314976448222, 0.07009306769467444, 0.06115332989597844, 0.07178418128379448, 0.04927907295689818]\n",
     "\n",
-    "println(u0)\n",
+    "#println(u0)\n",
     "println(u)\n",
     "println(f_to_c!(u0,p) - u)\n",
-    "println(u0)"
+    "#println(u0)\n",
+    "#F_alt!(R,zeros(5),flu[1,:],χ)\n",
+    "#p\n",
+    "#R"
    ]
   },
   {
@@ -83,26 +107,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "10-element Vector{Float64}:\n",
-       "   0.07113359600378673\n",
-       "   0.023301724805134316\n",
-       " 120.13672913730174\n",
-       " 195.08288176881715\n",
-       " 132.40096980129118\n",
-       " -10.0\n",
-       "   0.2\n",
-       "   0.1\n",
-       "   0.5\n",
-       "   0.2"
+       "  1.583333333333334\n",
+       "  0.4166666666666668\n",
+       "  0.5863713671457139\n",
+       "  0.18944305707784606\n",
+       "  0.22552744890219767\n",
+       " -2.0\n",
+       "  0.2\n",
+       "  0.01\n",
+       "  0.02\n",
+       "  0.03"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +137,7 @@
     "χ = [-1.0; -1.0; -5.0]\n",
     "M=1\n",
     "N=10\n",
-    "p_c2f = (χ, tol, iter_max, N, M, F_alt!, Jac_alt)\n",
+    "p_c2f = (χ, tol, iter_max, N, M, f2c!, Jf2c)\n",
     "p_f2c = (χ, N, M, F_alt!)\n",
     "u = zeros(N*M)\n",
     "u0 = zeros(N*M)\n",
@@ -121,30 +145,55 @@
     "con = view(reshape(u,(M,N)),:,1:5)\n",
     "flu = view(reshape(u,(M,N)),:,6:10)\n",
     "\n",
-    "flu[1,:] = [-10.0, 0.2, 0.1, 0.5, 0.2]\n",
+    "#flu[1,:] = [-2.0, 0.2, 0.1, 0.5, 0.2]\n",
+    "\n",
+    "flu[1,:] = [-2.0, 0.2, 0.01, 0.02, 0.03]\n",
+    "\n",
     "f_to_c!(u, p_f2c)\n",
     "\n",
     "con0 = view(reshape(u0,(M,N)),:,1:5)\n",
     "flu0 = view(reshape(u0,(M,N)),:,6:10)\n",
     "\n",
-    "flu0[1,:] = flu[1,:] + 0.3 .*rand(N÷2)\n",
+    "flu0[1,:] = flu[1,:] + 0.01.*rand(N÷2)\n",
     "con0[1,:] = con[1,:]\n",
+    "u-u0\n",
     "u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10-element Vector{Float64}:\n",
+       "  1.583333333333334\n",
+       "  0.4166666666666668\n",
+       "  0.5863713671457139\n",
+       "  0.18944305707784606\n",
+       "  0.22552744890219767\n",
+       " -1.9999999999999996\n",
+       "  0.2\n",
+       " -5.7777898331617076e-34\n",
+       "  7.703719777548943e-34\n",
+       " -3.0814879110195774e-33"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#@time c_to_f!(u0, p_c2f) #- u\n",
-    "c_to_f!(u0, p_c2f); #- u"
+    "c_to_f!(u0, p_c2f) #- u"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -156,14 +205,14 @@
        "  0.0\n",
        "  0.0\n",
        "  0.0\n",
+       "  4.440892098500626e-16\n",
        "  0.0\n",
-       " -2.7755575615628914e-17\n",
-       "  4.163336342344337e-17\n",
-       "  0.0\n",
-       "  5.551115123125783e-17"
+       " -0.01\n",
+       " -0.02\n",
+       " -0.03"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
