--- a/Simbolics.ipynb
+++ b/Simbolics.ipynb
@@ -78,9 +78,9 @@
    "source": [
     "ζ_s = UpperTriangular(ζ_t)\n",
     "ζ_t = [-1 2 3 4;\n",
-    "      0 1 5 6;\n",
-    "      0 0 1 8;\n",
-    "      0 0 0 -1]\n",
+    "        0 1 5 6;\n",
+    "        0 0 1 8;\n",
+    "        0 0 0 -1]\n",
     "ζ_s\n",
     "println(tr(ζ_s'*g'*g*ζ_s))\n",
     "ζ_h = Hermitian(ζ_s)\n",
@@ -225,8 +225,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 72,
+   "id": "b6638ae2-5134-43fc-bec6-6415089a420a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 1.0  2.0  3.0\n",
+       " 2.0  4.0  5.0\n",
+       " 3.0  5.0  6.0"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function vector2symmat!(v,sm)\n",
+    "    M = length(sm[1,:]) # N = M*(M+1)/2 \n",
+    "    N = length(v)\n",
+    "    if M*(M+1)÷2 != N\n",
+    "        error(\"Dimension missmatch, M = $M, N= $N\")\n",
+    "    end\n",
+    "    L = 1\n",
+    "    for i in 1:M\n",
+    "        for j in i:M\n",
+    "            sm[i,j] = v[L]\n",
+    "            sm[j,i] = sm[i,j]\n",
+    "            L=L+1\n",
+    "        end\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "v = [1;2;3;4;5;6]\n",
+    "sm = zeros(3,3)\n",
+    "\n",
+    "vector2symmat!(v,sm)\n",
+    "\n",
+    "sm"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3f1b2ecd-b2ee-441a-b18f-10818894af51",
+   "id": "c694b32b-285a-432f-8eee-5acc04e34181",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3b8e568-952f-48d6-b0b2-645041cf8d4f",
    "metadata": {},
    "outputs": [],
    "source": []
