Sumando una nota

--- a/Conf_Diss_code.ipynb
+++ b/Conf_Diss_code.ipynb
@@ -388,6 +388,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note on Initialization of initial data ###\n",
+    "\n",
+    "It has been defined vía the functions: `Initialize_data!(u,du,par,JA)` and the jacobian of `A(f_r,par)`, both in *Flux_function_ext.jl*. \n",
+    "\n",
+    "It seems it is not working propertly "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 147,
    "metadata": {
