--- a/Conf_Diss_code.ipynb
+++ b/Conf_Diss_code.ipynb
@@ -393,9 +393,9 @@
    "source": [
     "### Note on Initialization of initial data ###\n",
     "\n",
-    "It has been defined vía the functions: `Initialize_data!(u,du,par,JA)` and the jacobian of `A(f_r,par)`, both in *Flux_function_ext.jl*. \n",
+    "It has been defined vía the functions: `Initialize_data!(u,du,par,JA)` and the jacobian of `A(f_r,par)`, both in *Flux_function_ext.jl*. It is using only the $A_1$ part of $A^{abc}$ and the whole of the source. \n",
     "\n",
-    "It seems it is not working propertly "
+    "It seems it is not working propertly because it makes the initial jump of the initial data larger that when not using it!"
    ]
   },
   {
