--- a/Simbolics.ipynb
+++ b/Simbolics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ac6b5b92-5328-498d-ab22-0b262d16a04b",
    "metadata": {},
    "outputs": [],
@@ -15,21 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "21a7c9d7-f1ed-48d5-ac63-c8f4338f7aa4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4×4 Matrix{Int64}:\n",
-       " -1  0  0  0\n",
-       "  0  1  0  0\n",
-       "  0  0  1  0\n",
-       "  0  0  0  1"
+       "4×4 Diagonal{Float64, Vector{Float64}}:\n",
+       " -1.0   ⋅    ⋅    ⋅ \n",
+       "   ⋅   1.0   ⋅    ⋅ \n",
+       "   ⋅    ⋅   1.0   ⋅ \n",
+       "   ⋅    ⋅    ⋅   1.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,15 +38,12 @@
     "D = 4 #dimensions\n",
     "ζ_v = Vector{Float64}(undef,D)\n",
     "ζ_t = Array{Float64}(undef,D,D)\n",
-    "g = [-1 0 0 0;\n",
-    "      0 1 0 0;\n",
-    "      0 0 1 0;\n",
-    "      0 0 0 1]"
+    "g = Diagonal([-1.0, 1, 1, 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "3a47d60e-7586-4948-9b1a-8ccb6265d0d8",
    "metadata": {},
    "outputs": [
@@ -54,33 +51,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "158\n",
-      "312\n"
+      "158.0\n",
+      "312.0\n"
      ]
     },
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching adjoint(::Tuple{Int64, Float64, Int64, Int64})\n\u001b[0mClosest candidates are:\n\u001b[0m  adjoint(\u001b[91m::Hermitian\u001b[39m) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:346\n\u001b[0m  adjoint(\u001b[91m::FillArrays.Zeros{T, 2, Axes} where Axes\u001b[39m) where T at /Users/reula/.julia/packages/FillArrays/cVkp8/src/fillalgebra.jl:14\n\u001b[0m  adjoint(\u001b[91m::T\u001b[39m) where T<:AbstractAlgebra.MatElem at /Users/reula/.julia/packages/AbstractAlgebra/2tNNk/src/Rings.jl:207\n\u001b[0m  ...",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching adjoint(::Tuple{Int64, Float64, Int64, Int64})\n\u001b[0mClosest candidates are:\n\u001b[0m  adjoint(\u001b[91m::Hermitian\u001b[39m) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:346\n\u001b[0m  adjoint(\u001b[91m::FillArrays.Zeros{T, 2, Axes} where Axes\u001b[39m) where T at /Users/reula/.julia/packages/FillArrays/cVkp8/src/fillalgebra.jl:14\n\u001b[0m  adjoint(\u001b[91m::T\u001b[39m) where T<:AbstractAlgebra.MatElem at /Users/reula/.julia/packages/AbstractAlgebra/2tNNk/src/Rings.jl:207\n\u001b[0m  ...",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[36]:10",
-      " [2] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
-     ]
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ζ_s = UpperTriangular(ζ_t)\n",
     "ζ_t = [-1 2 3 4;\n",
     "        0 1 5 6;\n",
     "        0 0 1 8;\n",
     "        0 0 0 -1]\n",
+    "ζ_s = UpperTriangular(ζ_t)\n",
     "ζ_s\n",
     "println(tr(ζ_s'*g'*g*ζ_s))\n",
     "ζ_h = Hermitian(ζ_s)\n",
@@ -194,25 +185,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "3011ba54-d7d9-48cd-a244-f6bc42a38930",
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "MethodError: no method matching Hermitian(::Vector{Num})\n\u001b[0mClosest candidates are:\n\u001b[0m  Hermitian(\u001b[91m::Hermitian\u001b[39m) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:169\n\u001b[0m  Hermitian(\u001b[91m::Hermitian\u001b[39m, \u001b[91m::Symbol\u001b[39m) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:170\n\u001b[0m  Hermitian(\u001b[91m::Symmetric\u001b[39m) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:177\n\u001b[0m  ...",
+     "evalue": "UndefVarError: Φ not defined",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching Hermitian(::Vector{Num})\n\u001b[0mClosest candidates are:\n\u001b[0m  Hermitian(\u001b[91m::Hermitian\u001b[39m) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:169\n\u001b[0m  Hermitian(\u001b[91m::Hermitian\u001b[39m, \u001b[91m::Symbol\u001b[39m) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:170\n\u001b[0m  Hermitian(\u001b[91m::Symmetric\u001b[39m) at /Users/julia/buildbot/worker/package_macos64/build/usr/share/julia/stdlib/v1.6/LinearAlgebra/src/symmetric.jl:177\n\u001b[0m  ...",
+      "UndefVarError: Φ not defined",
       "",
       "Stacktrace:",
-      " [1] Φ(ζ_v::Vector{Num}, ζ_s::Vector{Num}, p::Vector{Num})",
-      "   @ Main ./In[39]:3",
-      " [2] top-level scope",
-      "   @ In[51]:1",
-      " [3] eval",
+      " [1] top-level scope",
+      "   @ In[11]:1",
+      " [2] eval",
       "   @ ./boot.jl:360 [inlined]",
-      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
       "   @ Base ./loading.jl:1094"
      ]
     }
