--- a/Principal_Alt.ipynb
+++ b/Principal_Alt.ipynb
@@ -63,7 +63,7 @@
     "$(\\zeta^a, \\zeta^{ab})$ -> $f^j = (\\mu, v, x_i)$ -> $(-1,0,0,0,0)$\n",
     "\n",
     "$$\n",
-    "\\partial_t c^j = \\partial_i F^{ij}(f) + I^j(f) = \\frac{\\partial F^{ij}}{\\partial f^k}\\partial_i f^k\n",
+    "\\partial_t c^j = \\partial_i F^{ij}(f) + I^j(f) = \\frac{\\partial F^{ij}}{\\partial f^k}\\partial_i f^k + I^j(f)\n",
     "$$\n",
     "\n",
     "$$\n",
@@ -2766,7 +2766,17 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{\\partial^3 \\chi}{\\partial \\zeta^a \\partial \\zeta^A \\partial \\zeta^B}\\nabla_a \\zeta^B = I^{A}\n",
+    "\\frac{\\partial^3 \\chi}{\\partial \\xi^a \\partial \\xi^A \\partial \\xi^B}\\nabla_a \\xi^B = I_{A}  \\;\\;\\;\\;\\;\\; \\xi_A = (\\xi_a,\\xi_{ab})\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b722453-3ad7-4250-91a4-fe8f5accd287",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{\\partial^3 \\chi}{\\partial \\xi^a \\partial \\xi^A \\partial \\xi^B} k_a \\delta \\xi^B = \\frac{\\partial I_{A}}{\\partial \\xi^B}   \\delta \\xi^B\n",
     "$$"
    ]
   },
@@ -2776,7 +2786,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\nabla_a(\\frac{\\partial^2 \\chi}{\\partial \\zeta^a \\partial \\zeta^A}) = \\nabla_a F^{aA} = I^A\n",
+    "\\nabla_a(\\frac{\\partial^2 \\chi}{\\partial \\xi^a \\partial \\xi^A}) = \\nabla_a F^{aA} = I^A\n",
     "$$"
    ]
   },
