--- a/Principal_Alt.ipynb
+++ b/Principal_Alt.ipynb
@@ -20,19 +20,32 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5×5 Matrix{Rational{Int64}}:\n",
-       " 1//1  0//1  0//1  0//1  0//1\n",
-       " 0//1  1//1  0//1  0//1  0//1\n",
-       " 0//1  0//1  3//4  0//1  1//4\n",
-       " 0//1  0//1  0//1  1//2  0//1\n",
-       " 0//1  0//1  1//4  0//1  3//4"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "LoadError: setindex! not defined for Symbolics.Arr{Num, 1}\nin expression starting at /Users/reula/Julia/Fluidos_Conformes/inversion_ext.jl:162",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: setindex! not defined for Symbolics.Arr{Num, 1}\nin expression starting at /Users/reula/Julia/Fluidos_Conformes/inversion_ext.jl:162",
+      "",
+      "Stacktrace:",
+      " [1] error(::String, ::Type)",
+      "   @ Base ./error.jl:42",
+      " [2] error_if_canonical_setindex(#unused#::IndexCartesian, A::Symbolics.Arr{Num, 1}, #unused#::Int64)",
+      "   @ Base ./abstractarray.jl:1277",
+      " [3] setindex!",
+      "   @ ./abstractarray.jl:1266 [inlined]",
+      " [4] f2c!(R::Symbolics.Arr{Num, 1}, flu::Symbolics.Arr{Num, 1}, con::Symbolics.Arr{Num, 1}, χ::Symbolics.Arr{Num, 1})",
+      "   @ Main ~/Julia/Fluidos_Conformes/inversion_ext.jl:152",
+      " [5] top-level scope",
+      "   @ ~/Julia/Fluidos_Conformes/inversion_ext.jl:162",
+      " [6] include(fname::String)",
+      "   @ Base.MainInclude ./client.jl:444",
+      " [7] top-level scope",
+      "   @ In[2]:1",
+      " [8] eval",
+      "   @ ./boot.jl:360 [inlined]",
+      " [9] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1094"
+     ]
     }
    ],
    "source": [
