sym_v1 está funcionando! Espero que bien :+1:

--- a/Simbolics.ipynb
+++ b/Simbolics.ipynb
@@ -33,24 +33,13 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "LoadError: UndefVarError: ζ_v not defined\nin expression starting at /Users/reula/Julia/Fluidos_Conformes/symbolics_ext.jl:178",
-     "output_type": "error",
-     "traceback": [
-      "LoadError: UndefVarError: ζ_v not defined\nin expression starting at /Users/reula/Julia/Fluidos_Conformes/symbolics_ext.jl:178",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ ~/Julia/Fluidos_Conformes/symbolics_ext.jl:178",
-      " [2] include(fname::String)",
-      "   @ Base.MainInclude ./client.jl:444",
-      " [3] top-level scope",
-      "   @ In[2]:1",
-      " [4] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
-     ]
+     "data": {
+      "text/plain": [
+       "tau2 (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -70,27 +59,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "21a7c9d7-f1ed-48d5-ac63-c8f4338f7aa4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3×3 Matrix{Float64}:\n",
-       " -1.0  0.0  0.0\n",
-       "  0.0  1.0  0.0\n",
-       "  0.0  0.0  1.0"
+       "2×2 Matrix{Float64}:\n",
+       " -1.0  0.0\n",
+       "  0.0  1.0"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "#D = Int64(4) #dimensions\n",
-    "D = Int64(3) #dimensions\n",
+    "D = Int64(2) #dimensions\n",
     "L = (D+(D*(D+1)÷2))\n",
     "ζ = Vector{Float64}(undef,L)\n",
     "ζ_v = Vector{Float64}(undef,D)\n",
@@ -100,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "b6638ae2-5134-43fc-bec6-6415089a420a",
    "metadata": {},
    "outputs": [
@@ -113,9 +100,8 @@
        " 3.0  5.0  6.0"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -128,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "c694b32b-285a-432f-8eee-5acc04e34181",
    "metadata": {},
    "outputs": [
@@ -144,9 +130,8 @@
        " 6.0"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -155,19 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "cdbba61d-65d3-4265-9314-4f939d1f3398",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0.6415086436814861, 0.16935574467314396, 0.5930188150553715], [0.3947578284653297 0.9271615075891138 0.6313105189806811; 0.9271615075891138 0.19317063264501866 0.4288760627161583; 0.6313105189806811 0.4288760627161583 0.9974373301632162])"
+       "([0.9070927111057722, 0.7043358484604735], [0.8329732507262227 0.9158566651326762; 0.9158566651326762 0.18222620899792474])"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -176,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "id": "4fd4cf2c-8dc5-429f-bfe1-bfdff6afa7bb",
    "metadata": {},
    "outputs": [
@@ -186,9 +170,8 @@
        "([1, 2, 3, 4], [5.0 6.0 7.0 8.0; 6.0 9.0 10.0 11.0; 7.0 10.0 12.0 13.0; 8.0 11.0 13.0 14.0])"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -198,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "3a47d60e-7586-4948-9b1a-8ccb6265d0d8",
    "metadata": {},
    "outputs": [
@@ -206,18 +189,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.2994583128709905\n"
+      "0.9178864050156783\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1.1102230246251565e-16"
+       "0.0"
       ]
      },
-     "execution_count": 41,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -249,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "id": "f8666e49-b8d0-43d6-9063-4115eea7b2ad",
    "metadata": {},
    "outputs": [
@@ -259,9 +241,8 @@
        "0.6214398204617124"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -302,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "17bd1646-5179-4051-847b-8ff1c376e414",
    "metadata": {},
    "outputs": [],
@@ -938,43 +919,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "62242141-84a1-4f56-9b88-7cd0017ae612",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "49ff8369",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "UndefVarError: χ₁ not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: χ₁ not defined",
-      "",
-      "Stacktrace:",
-      " [1] Φ_new(ζ::Symbolics.Arr{Num, 1}, p::Tuple{Symbolics.Arr{Num, 1}, Symbolics.Arr{Num, 2}})",
-      "   @ Main ~/Julia/Fluidos_Conformes/symbolics_ext.jl:213",
-      " [2] top-level scope",
-      "   @ In[36]:5",
-      " [3] eval",
-      "   @ ./boot.jl:360 [inlined]",
-      " [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-      "   @ Base ./loading.jl:1094"
-     ]
+     "data": {
+      "text/plain": [
+       "11939.973833698416"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "include(\"symbolics_ext.jl\")\n",
+    "\n",
+    "Φ_new(rand(L),([1.0;1.0;1.0],make_g(D)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "49ff8369",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "@variables vs[1:L] ps[1:3] gs[D,D]\n",
     "vst = [vs[i] for i ∈ 1:L]\n",
     "pv = (ps, gs)\n",
-    "Jζ = Symbolics.jacobian(Φ_new(vs,pv),vst) "
+    "∇ζ = Symbolics.gradient(Φ_new(vs,pv),vst);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e7bd7fb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "∇ζ_exp = Symbolics.build_function(∇ζ,vs,pv);\n",
+    "∇ζ_f = eval(∇ζ_exp[1]);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "36223f89",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching create_array(::Type{Tuple{Vector{Float64}, Matrix{Float64}}}, ::Nothing, ::Val{1}, ::Val{(5,)}, ::Float64, ::Float64, ::Float64, ::Float64, ::Float64)\nClosest candidates are:\n  create_array(!Matched::Type{<:LabelledArrays.SLArray}, ::Any, ::Val, ::Val{dims}, ::Any...) where dims at ~/.julia/packages/SymbolicUtils/fgHzN/src/code.jl:498\n  create_array(!Matched::Type{<:LabelledArrays.LArray}, ::Any, ::Val, ::Val{dims}, ::Any...) where dims at ~/.julia/packages/SymbolicUtils/fgHzN/src/code.jl:507\n  create_array(!Matched::Type{<:PermutedDimsArray{T, N, perm, iperm, P}}, ::Any, ::Val, ::Val, ::Any...) where {T, N, perm, iperm, P} at ~/.julia/packages/SymbolicUtils/fgHzN/src/code.jl:466\n  ...",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching create_array(::Type{Tuple{Vector{Float64}, Matrix{Float64}}}, ::Nothing, ::Val{1}, ::Val{(5,)}, ::Float64, ::Float64, ::Float64, ::Float64, ::Float64)\n",
+      "Closest candidates are:\n",
+      "  create_array(!Matched::Type{<:LabelledArrays.SLArray}, ::Any, ::Val, ::Val{dims}, ::Any...) where dims at ~/.julia/packages/SymbolicUtils/fgHzN/src/code.jl:498\n",
+      "  create_array(!Matched::Type{<:LabelledArrays.LArray}, ::Any, ::Val, ::Val{dims}, ::Any...) where dims at ~/.julia/packages/SymbolicUtils/fgHzN/src/code.jl:507\n",
+      "  create_array(!Matched::Type{<:PermutedDimsArray{T, N, perm, iperm, P}}, ::Any, ::Val, ::Val, ::Any...) where {T, N, perm, iperm, P} at ~/.julia/packages/SymbolicUtils/fgHzN/src/code.jl:466\n",
+      "  ...\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] (::var\"#37#38\")(vs::Vector{Float64}, ˍ₋arg2::Tuple{Vector{Float64}, Matrix{Float64}})\n",
+      "    @ Main ~/.julia/packages/SymbolicUtils/fgHzN/src/code.jl:396\n",
+      "  [2] top-level scope\n",
+      "    @ ~/Julia/Fluidos_Conformes/Simbolics.ipynb:3\n",
+      "  [3] eval\n",
+      "    @ ./boot.jl:373 [inlined]\n",
+      "  [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:1196\n",
+      "  [5] #invokelatest#2\n",
+      "    @ ./essentials.jl:716 [inlined]\n",
+      "  [6] invokelatest\n",
+      "    @ ./essentials.jl:714 [inlined]\n",
+      "  [7] (::VSCodeServer.var\"#150#151\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/packages/VSCodeServer/src/serve_notebook.jl:18\n",
+      "  [8] withpath(f::VSCodeServer.var\"#150#151\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/packages/VSCodeServer/src/repl.jl:185\n",
+      "  [9] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/packages/VSCodeServer/src/serve_notebook.jl:14\n",
+      " [10] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/packages/JSONRPC/src/typed.jl:67\n",
+      " [11] serve_notebook(pipename::String; crashreporting_pipename::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/packages/VSCodeServer/src/serve_notebook.jl:94\n",
+      " [12] top-level scope\n",
+      "    @ ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/notebook/notebook.jl:12\n",
+      " [13] include(mod::Module, _path::String)\n",
+      "    @ Base ./Base.jl:418\n",
+      " [14] exec_options(opts::Base.JLOptions)\n",
+      "    @ Base ./client.jl:292\n",
+      " [15] _start()\n",
+      "    @ Base ./client.jl:495"
+     ]
+    }
+   ],
+   "source": [
+    "g = make_g(D)\n",
+    "pp = ([1.0;1.0;1.0],g)\n",
+    "∇ζ_f(rand(L),([1.0;1.0;1.0],make_g(D)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fa92c05f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: objects of type Vector{Num} are not callable\nUse square brackets [] for indexing an Array.",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: objects of type Vector{Num} are not callable\n",
+      "Use square brackets [] for indexing an Array.\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] top-level scope\n",
+      "    @ ~/Julia/Fluidos_Conformes/Simbolics.ipynb:1\n",
+      "  [2] eval\n",
+      "    @ ./boot.jl:373 [inlined]\n",
+      "  [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:1196\n",
+      "  [4] #invokelatest#2\n",
+      "    @ ./essentials.jl:716 [inlined]\n",
+      "  [5] invokelatest\n",
+      "    @ ./essentials.jl:714 [inlined]\n",
+      "  [6] (::VSCodeServer.var\"#150#151\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/packages/VSCodeServer/src/serve_notebook.jl:18\n",
+      "  [7] withpath(f::VSCodeServer.var\"#150#151\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/packages/VSCodeServer/src/repl.jl:185\n",
+      "  [8] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/packages/VSCodeServer/src/serve_notebook.jl:14\n",
+      "  [9] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/packages/JSONRPC/src/typed.jl:67\n",
+      " [10] serve_notebook(pipename::String; crashreporting_pipename::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/packages/VSCodeServer/src/serve_notebook.jl:94\n",
+      " [11] top-level scope\n",
+      "    @ ~/.vscode/extensions/julialang.language-julia-1.5.6/scripts/notebook/notebook.jl:12\n",
+      " [12] include(mod::Module, _path::String)\n",
+      "    @ Base ./Base.jl:418\n",
+      " [13] exec_options(opts::Base.JLOptions)\n",
+      "    @ Base ./client.jl:292\n",
+      " [14] _start()\n",
+      "    @ Base ./client.jl:495"
+     ]
+    }
+   ],
+   "source": [
+    "Symbolics.jacobian(∇ζ(vs,pv),vst);"
    ]
   },
   {
@@ -1127,15 +1221,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.1",
+   "display_name": "Julia 1.7.0",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.7"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.1"
+   "version": "1.7.0"
   }
  },
  "nbformat": 4,
